--- a/RGJ04/CMakeLists.txt
+++ b/RGJ04/CMakeLists.txt
@@ -2,12 +2,14 @@ cmake_minimum_required(VERSION 2.8.0)
 
 project(RGJ04)
 
+file(TO_CMAKE_PATH "${CMAKE_SOURCE_DIR}/sfml/" SFMLDIR)
+cmake_path(ABSOLUTE_PATH SFMLDIR NORMALIZE)
+
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake-extras/")
 
 #set(Boost_USE_STATIC_LIBS ON)
 #set(Boost_USE_MULTITHREADED ON)
 
-find_package(SFML 2 COMPONENTS audio graphics system window REQUIRED)
 find_package(Boost COMPONENTS system REQUIRED)
 
 add_definitions(-Wall -Wextra -g -pedantic -fPIC -std=c++0x)
@@ -18,8 +20,12 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 include_directories(
 	"${CMAKE_SOURCE_DIR}/src/"
 	${Boost_INCLUDE_DIRS}
-	${SFML_INCLUDE_DIRS}
+    "${SFMLDIR}/include/"
 )
+link_directories(
+    "${SFMLDIR}/build/lib/"
+)
+
 
 aux_source_directory(src/ sources)
 
@@ -31,5 +37,8 @@ add_executable(ameboid
 
 target_link_libraries(ameboid
     #${Boost_LIBRARIES}
-	${SFML_LIBRARIES}
+    sfml-audio  
+    sfml-graphics   
+    sfml-system     
+    sfml-window 
 )
